// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Scroll Area. should call addScrollArea when mounting. 1`] = `
Array [
  Symbol(),
  <div>
    <h1>
      Test
    </h1>
  </div>,
]
`;

exports[`Test Scroll Area. should call removeScrollArea when unmounting. 1`] = `
Array [
  Symbol(),
]
`;

exports[`Test Scroll Area. should render correctly. 1`] = `
<div>
  <div
    class="foo"
  >
    <h1>
      Test
    </h1>
  </div>
</div>
`;
